--- a/novacal-app/novacal-frontend/src/index.css
+++ b/novacal-app/novacal-frontend/src/index.css
@@ -23,6 +23,14 @@
   background-repeat: no-repeat;
 }
 
+.hours-background {
+  background-image: url('./assets/coolbackgrounds-unsplash-zeller.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
 /* Put this in globals.css or a module.css */
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
