--- a/novacal-app/novacal-frontend/src/index.css
+++ b/novacal-app/novacal-frontend/src/index.css
@@ -23,6 +23,14 @@
   background-repeat: no-repeat;
 }
 
+.analytics-background {
+  background-image: url('./assets/coolbackgrounds-particles-compute.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
 .hours-background {
   background-image: url('./assets/coolbackgrounds-unsplash-zeller.jpg');
   background-size: cover;
